--- a/docs/linux/linux-memfault-hawkbit-comparison.mdx
+++ b/docs/linux/linux-memfault-hawkbit-comparison.mdx
@@ -1,7 +1,7 @@
 ---
 id: linux-memfault-hawkbit-comparison
-title: Memfault OTA for hawkBit users
-sidebar_label: Memfault OTA for hawkBit users
+title: "Comparison: Memfault OTA and hawkBit"
+sidebar_label: "Comparison: Memfault OTA and hawkBit"
 ---
 
 Memfault's Embedded Linux Over-the-Air updates (OTA) solution is hawkBit Direct
