Update terminology page and remove Deployments term

--- a/docs/platform/memfault-terminology.mdx
+++ b/docs/platform/memfault-terminology.mdx
@@ -13,13 +13,12 @@ sidebar_label: Memfault Terminology
 | Coredump                                                               | A capture of the entire memory space of a Device which will generate a Trace in Memfault                                                                                                                                                                                                                                                                                                                                               |
 | Device                                                                 | An edge device that communicates with Memfault. It can report Events, be updated with new software, grouped into Cohorts, etc.                                                                                                                                                                                                                                                                                                         |
 | Device - Active <a class="anchor-offset" name="device-active"></a>     | A device that has reported diagnostics data in the last week.                                                                                                                                                                                                                                                                                                                                                                          |
-| Device - Inactive <a class="anchor-offset" name="device-inactive"></a> | A device that has previously reported diagnostics data, but not in the last week.                                                                                                                                                                                                                                                                                                                                                      |
-| Device - Pending <a class="anchor-offset" name="device-pending"></a>   | A device that has been created but diagnostics data has not yet been received. This can happen when devices have been created via API or CSV upload, or when devices check for OTA updates but are not uploading diagnostics data.                                                                                                                                                                                                     |
+| Device - Inactive <a class="anchor-offset" name="device-inactive"></a> | A device that has previously reported diagnostics data before the currently viewed time window, which is usually daily, weekly, or monthly.                                                                                                                                                                                                                                                                                            |
+| Device - Pending <a class="anchor-offset" name="device-pending"></a>   | A device that has been created but not had a touch-point with the Memfault service yet. This can happen when devices have been created via API or CSV upload.                                                                                                                                                                                                                                                                          |
 | Device Attribute                                                       | The latest value reported for a device for a custom metric (e.g. `battery_level`).                                                                                                                                                                                                                                                                                                                                                     |
 | Device ID <a class="anchor-offset" name="device-id"></a>               | The Unique Identifier of a Device, often the device serial. It must be an alphanumeric slug (matching this regex: `^[-a-zA-Z0-9_]+$`).                                                                                                                                                                                                                                                                                                 |
 | Device Set                                                             | A collection of Devices defined by a search query.                                                                                                                                                                                                                                                                                                                                                                                     |
-| Event                                                                  | A small payload of information sent from a Device. There are many types of Events, such as Heartbeat Events, Events, Device install Events, etc.                                                                                                                                                                                                                                                                                       |
-| Event - Device Install                                                 | Events that are generated during a firmware update procedure tracking progress                                                                                                                                                                                                                                                                                                                                                         |
+| Event                                                                  | A small payload of information sent from a Device. There are many types of Events, such as Heartbeat Events and Trace Events, etc.                                                                                                                                                                                                                                                                                                     |
 | Event - Heartbeat                                                      | Hourly Events that contain vital information about the health of a Device. Most of the data here is user defined and customizable.                                                                                                                                                                                                                                                                                                     |
 | Event - Trace                                                          | Event captured when the device crashes or when the SDK is told to capture a trace manually.                                                                                                                                                                                                                                                                                                                                            |
 | Firmware                                                               | The actual firmware binary that is downloaded by the device to install. It can be a raw binary or a .zip containing multiple binaries.                                                                                                                                                                                                                                                                                                 |
@@ -30,7 +29,6 @@ sidebar_label: Memfault Terminology
 | Issue State - Resolved                                                 | An Issue has been closed and will no longer appear in the list of Issues                                                                                                                                                                                                                                                                                                                                                               |
 | Metric                                                                 | A key-value pair representing a useful piece of information that a Device records. A few examples include uptime, free memory, battery life, current state of power                                                                                                                                                                                                                                                                    |
 | Organization                                                           | Entity which contains many projects and users. Typically one organization per company.                                                                                                                                                                                                                                                                                                                                                 |
-| Owner Ref                                                              | A user-defined unique identifier which can refer to the "owner" of a Device. Since Memfault wants all your customers data to stay in your own systems, you can use this field to associate a device to a "user" without giving us the user data.                                                                                                                                                                                       |
 | Project                                                                | A logical warehouse of all the Memfault data related to a particular class of device. Contains Releases, Cohorts, Issues, etc.                                                                                                                                                                                                                                                                                                         |
 | Project Key                                                            | The key that is included in the Header of the HTTP request when sending (or retrieving) data from Memfault servers. This is only allowed/required on certain endpoints. It does not grant access to all API endpoints. For general Auth, refer to the Auth section of the Memfault API Documentation                                                                                                                                   |
 | Release                                                                | A logical grouping of Artifacts that are usually built from the same revision.                                                                                                                                                                                                                                                                                                                                                         |
