--- a/docs/platform/ota.mdx
+++ b/docs/platform/ota.mdx
@@ -105,7 +105,7 @@ Cohort incrementally.
 
 When a staged-rollout Release Activation is created for a Cohort, a random
 subset of its devices (amounting to the selected rollout percentage) will be
-marked as _staged_ in this Cohort. Staged-rollout deployments are only
+marked as _staged_ in this Cohort. Staged-rollout release activations are only
 applicable to devices that are _staged_ in the Cohort.
 
 ### Best Practices When Activating Releases
@@ -389,7 +389,8 @@ on the left side of the matrix:
 In the **Cohorts** list view, accessible from the main menu on the left side of
 the application, some OTA-related information is available for each Cohort:
 
-- Whether a Release is active for the Cohort (under the _Deployment_ column).
+- Whether a Release is active for the Cohort (under the _ Release Activation_
+  column).
 - A software distribution widget (under the _Software Distribution_ column).
 
 The distribution of Software Versions in this Cohort is shown in different
