--- a/docs/platform/memfault-terminology.mdx
+++ b/docs/platform/memfault-terminology.mdx
@@ -12,9 +12,9 @@ sidebar_label: Memfault Terminology
 | Cohort <a class="anchor-offset" name="cohort"></a>                     | Grouping of devices. Typical cohorts are "alpha", "beta", and "prod", but these can be any grouping, such as a deployment facility.                                                                                                                                                                                                                                                                                                    |
 | Coredump                                                               | A capture of the entire memory space of a Device which will generate a Trace in Memfault                                                                                                                                                                                                                                                                                                                                               |
 | Device                                                                 | An edge device that communicates with Memfault. It can report Events, be updated with new software, grouped into Cohorts, etc.                                                                                                                                                                                                                                                                                                         |
-| Device - Active <a class="anchor-offset" name="device-active"></a>     | A device that has reported diagnostics data in the last week.                                                                                                                                                                                                                                                                                                                                                                          |
-| Device - Inactive <a class="anchor-offset" name="device-inactive"></a> | A device that has previously reported diagnostics data before the currently viewed time window, which is usually daily, weekly, or monthly.                                                                                                                                                                                                                                                                                            |
-| Device - Pending <a class="anchor-offset" name="device-pending"></a>   | A device that has been created but not had a touch-point with the Memfault service yet. This can happen when devices have been created via API or CSV upload.                                                                                                                                                                                                                                                                          |
+| Device - Active <a class="anchor-offset" name="device-active"></a>     | A device that has contacted Memfault in the currently viewed time window, which is usually daily, weekly, or monthly.                                                                                                                                                                                                                                                                                                                  |
+| Device - Inactive <a class="anchor-offset" name="device-inactive"></a> | A device that has previously contacted Memfault before the currently viewed time window, which is usually daily, weekly, or monthly.                                                                                                                                                                                                                                                                                                   |
+| Device - Pending <a class="anchor-offset" name="device-pending"></a>   | A device that has been created but has not contacted the Memfault service yet. This can happen when devices have been created via API or CSV upload.                                                                                                                                                                                                                                                                                   |
 | Device Attribute                                                       | The latest value reported for a device for a custom metric (e.g. `battery_level`).                                                                                                                                                                                                                                                                                                                                                     |
 | Device ID <a class="anchor-offset" name="device-id"></a>               | The Unique Identifier of a Device, often the device serial. It must be an alphanumeric slug (matching this regex: `^[-a-zA-Z0-9_]+$`).                                                                                                                                                                                                                                                                                                 |
 | Device Set                                                             | A collection of Devices defined by a search query.                                                                                                                                                                                                                                                                                                                                                                                     |
