MFLT-6774 Mention Delta Updates MCU Interrupt post in docs (#287)
Add mention of the Interrupt delta updates post in our OTA section.

--- a/docs/platform/ota.mdx
+++ b/docs/platform/ota.mdx
@@ -84,7 +84,12 @@ Delta Releases allow for more fine-grained control over the update paths of
 devices. Additionally, Delta Releases generally contain smaller payloads,
 reducing required bandwidth and costs associated with rolling out updates.
 
-See the [updating behavior](#updating-behavior) section for more details.
+See the [updating behavior](#updating-behavior) section for more details on
+Delta Releases.
+
+Another good place to learn more about delta updates for MCU-based devices in
+our Interrupt blog post
+[Saving bandwidth with delta firmware updates](https://interrupt.memfault.com/blog/ota-delta-updates).
 
 ### Activating a Release
 
